<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WiMap</string>
    <string name="action_settings">Settings</string>
    <string name="click_start">Now u click start...</string>
    <string name="bindcalculating">bind Calculating Mode</string>
    <string name="msg"/>
    <string name="bottom">國立臺南大學行動計算與網路實驗室 2014</string>
    <string name="admob_id">ca-app-pub-2239255177926972/1561905844</string>
    
    <string-array name="DifferenceFilter_entries">
        <item>0</item>       
        <item>5</item>     
        <item>10</item>        
        <item>15</item>       
        <item>20</item>        
        <item>25</item>        
        <item>30</item>       
        <item>35</item>       
        <item>40</item>       
        <item>45</item>        
        <item>50</item>
    </string-array>
    
    <string name="default_DifferenceFilter_entries">10</string>
    
    <string-array name="PathLoss_entries">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    
    <string name="default_PathLoss_entries">2</string>
    
    <string-array name="NodeList_entries">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
    </string-array>
    
    <string name="default_NodeList_entries">3</string>
    
    <string-array name="FrequencyList_entries">
        <item>0.1秒</item>
        <item>0.2秒</item>
        <item>0.3秒</item>
        <item>0.4秒</item>
        <item>0.5秒</item>
        <item>0.6秒</item>
        <item>0.7秒</item>
        <item>0.8秒</item>
        <item>0.9秒</item>
        <item>1.0秒</item>
        <item>1.1秒</item>
        <item>1.2秒</item>
        <item>1.3秒</item>
        <item>1.4秒</item>
        <item>1.5秒</item>
        <item>1.6秒</item>
        <item>1.7秒</item>
        <item>1.8秒</item>
        <item>1.9秒</item>
        <item>2.0秒</item>       
        <item>2.1秒</item>
        <item>2.2秒</item>
        <item>2.3秒</item>
        <item>2.4秒</item>
        <item>2.5秒</item>
        <item>2.6秒</item>
        <item>2.7秒</item>
        <item>2.8秒</item>
        <item>2.9秒</item>
        <item>3.0秒</item>
        <item>3.1秒</item>
        <item>3.2秒</item>
        <item>3.3秒</item>
        <item>3.4秒</item>
        <item>3.5秒</item>
        <item>3.6秒</item>
        <item>3.7秒</item>
        <item>3.8秒</item>
        <item>3.9秒</item>
        <item>4.0秒</item>
        <item>4.1秒</item>
        <item>4.2秒</item>
        <item>4.3秒</item>
        <item>4.4秒</item>
        <item>4.5秒</item>
        <item>4.6秒</item>
        <item>4.7秒</item>
        <item>4.8秒</item>
        <item>4.9秒</item>
        <item>5.0秒</item>
      
    </string-array>
    
    <string-array name="FrequencyList_value_entries">
        <item>0.1</item>
        <item>0.2</item>
        <item>0.3</item>
        <item>0.4</item>
        <item>0.5</item>
        <item>0.6</item>
        <item>0.7</item>
        <item>0.8</item>
        <item>0.9</item>
        <item>1.0</item>
        <item>1.1</item>
        <item>1.2</item>
        <item>1.3</item>
        <item>1.4</item>
        <item>1.5</item>
        <item>1.6</item>
        <item>1.7</item>
        <item>1.8</item>
        <item>1.9</item>
        <item>2.0</item>       
        <item>2.1</item>
        <item>2.2</item>
        <item>2.3</item>
        <item>2.4</item>
        <item>2.5</item>
        <item>2.6</item>
        <item>2.7</item>
        <item>2.8</item>
        <item>2.9</item>
        <item>3.0</item>
        <item>3.1</item>
        <item>3.2</item>
        <item>3.3</item>
        <item>3.4</item>
        <item>3.5</item>
        <item>3.6</item>
        <item>3.7</item>
        <item>3.8</item>
        <item>3.9</item>
        <item>4.0</item>
        <item>4.1</item>
        <item>4.2</item>
        <item>4.3</item>
        <item>4.4</item>
        <item>4.5</item>
        <item>4.6</item>
        <item>4.7</item>
        <item>4.8</item>
        <item>4.9</item>
        <item>5.0</item>
      
    </string-array>
    
    <string name="default_FrequencyList_entries">0.1秒</string>

    <string-array name="StrideMultiply_entries">
        <item>1</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>35</item>
        <item>40</item>
        <item>45</item>
        <item>50</item>
        <item>55</item>
        <item>60</item>
        <item>65</item>
        <item>70</item>
        <item>75</item>
        <item>80</item>
        <item>85</item>
        <item>90</item>
        <item>95</item>
        <item>100</item>
    </string-array>
    
    <string name="default_StrideMultiply_entries">30</string>
    
    
</resources>
